Fix: not responsive detail template

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -753,8 +753,16 @@ main {
         flex-direction: column;
     }     
 
-    #detail-head {
+    #detail section > div {
         flex-direction: column;
+    }
+
+    #detail img {
+        width: 100%;
+    }
+
+    .flex-grow-1 {
+        flex-basis: 48%;
     }
 
     #jumbotron {
@@ -797,8 +805,16 @@ main {
         padding: 1rem 2rem;
     }
 
-    #detail-head {
+    #detail section > div {
         flex-direction: column;
+    }
+
+    #detail img {
+        width: 100%;
+    }
+
+    .flex-grow-1 {
+        flex-basis: 48%;
     }
 
     #menu {
@@ -852,8 +868,16 @@ main {
         padding: 1rem 2rem;
     }
 
-    #detail-head {
+    #detail section > div {
         flex-direction: column;
+    }
+
+    #detail img {
+        width: 100%;
+    }
+
+    .flex-grow-1 {
+        flex-basis: 48%;
     }
 
     #content > div {
